--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "typescript": "5.9.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "sass": "^1.96.0",
+    "tailwindcss": "^3.4.19"
   }
 }
